feat(scenario): add messages instead of mixed single nodes
